Новая форма Сдать вагоны на УЗ

--- a/WEB_UI/Content/view/idsrwt/outgoing.css
+++ b/WEB_UI/Content/view/idsrwt/outgoing.css
@@ -1,122 +1,14 @@
 ﻿/*@import url("../../font-awesome/css/font-awesome.min.css");*/
 
-body {
-}
-/**/
-td.icon-right {
-    background: url('../../../Images/idsrwt/right.png') no-repeat left center;
-}
-
-td.icon-user {
-    background: url('../../../Images/idsrwt/user.png') no-repeat left center;
-}
-
-icon-ok {
-    background: url('../../../Images/idsrwt/ok.png') no-repeat center center;
-}
-
-td.icon-out {
-    background: url('../../../Images/idsrwt/out.png') no-repeat center center;
-}
-
-td.icon-warning {
-    background: url('../../../Images/idsrwt/warning.png') no-repeat center center;
-}
-
-td.icon-delete {
-    background: url('../../../Images/idsrwt/delete.png') no-repeat center center;
-}
-/**/
-table.dataTable tbody tr:not(.selected).status-in-work.odd, table.dataTable tbody tr:not(.selected).status-in-work.even {
-    background-color: #fcf2ba;
-}
-
-table.dataTable tbody tr:not(.selected).status-accepted.odd, table.dataTable tbody tr:not(.selected).status-accepted.even {
-    background-color: #aeffb9;
-}
-
-table.dataTable tbody tr:not(.selected).status-outgoing.odd, table.dataTable tbody tr:not(.selected).status-outgoing.even {
-    background-color: #0094ff;
-}
-
-table.dataTable tbody tr:not(.selected).status-rejected.odd, table.dataTable tbody tr:not(.selected).status-rejected.even {
-    background-color: #fbcfcf;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.status-in-work > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.status-in-work > .sorting_1 {
-    background-color: #F9DA9F;
-}
-table.dataTable.display tbody tr:not(.selected).even.status-in-work > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.status-in-work > .sorting_1 {
-    background-color: #F9DA9F;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.status-accepted > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.status-accepted > .sorting_1 {
-    background-color: #8EFFA8;
-}
-
-table.dataTable.display tbody tr:not(.selected).even.status-accepted > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.status-accepted > .sorting_1 {
-    background-color: #8EFFA8;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.status-outgoing > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.status-outgoing > .sorting_1 {
-    background-color: #1075be;
-}
-
-table.dataTable.display tbody tr:not(.selected).even.status-outgoing > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.status-outgoing > .sorting_1 {
-    background-color: #1075be;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.status-rejected > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.status-rejected > .sorting_1 {
-    background-color: #F9AEBB;
-}
-
-table.dataTable.display tbody tr:not(.selected).even.status-rejected > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.status-rejected > .sorting_1 {
-    background-color: #F9AEBB;
-}
-
-div.dt-buttons a {
-    margin-right: 2px;
-}
-
-/*Коррекция отображения компонента дата и время*/
-.date-picker {
-    z-index: 202;
-}
-
-.date-picker-wrapper {
-    z-index: 201;
-}
-
-    .date-picker-wrapper .gap {
-        z-index: 201;
-    }
-
-        .date-picker-wrapper .gap .gap-line .gap-1 {
-            z-index: 201;
-        }
-
-        .date-picker-wrapper .gap .gap-line .gap-2 {
-            z-index: 202;
-        }
-
-        .date-picker-wrapper .gap .gap-line .gap-3 {
-            z-index: 202;
-        }
-
-        .date-picker-wrapper .gap .gap-top-mask {
-            z-index: 203;
-        }
-
-        .date-picker-wrapper .gap .gap-bottom-mask {
-            z-index: 203;
-        }
+/*body {
+}*/
 
 /* -------------------------------- 
 
 cars detali panel 
 
 -------------------------------- */
-.cd-cars-detali {
+/*.cd-cars-detali {
     position: fixed;
     z-index: 3;
     top: 0;
@@ -124,9 +16,9 @@ cars detali panel
     width: 100%;
     height: 100%;
     visibility: hidden;
-    background-color: #ebebeb;
+    background-color: #ebebeb;*/
     /* Force Hardware Acceleration */
-    -webkit-transform: translateZ(0);
+    /*-webkit-transform: translateZ(0);
     -moz-transform: translateZ(0);
     -ms-transform: translateZ(0);
     -o-transform: translateZ(0);
@@ -167,10 +59,10 @@ cars detali panel
         transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
     }
 
-        .cd-cars-detali.is-visible > div {
+        .cd-cars-detali.is-visible > div {*/
             /* smooth scrolling on iOS */
-            -webkit-overflow-scrolling: touch;
-        }
+            /*-webkit-overflow-scrolling: touch;
+        }*/
 
     /*.cd-cars-detali p {
         margin-bottom: 1em;
@@ -180,7 +72,7 @@ cars detali panel
         font-weight:400;
     }*/
 
-    .cd-cars-detali .close {
+    /*.cd-cars-detali .close {
         display: block;
         height: 32px;
         width: 32px;
@@ -190,9 +82,9 @@ cars detali panel
         background: url(../../../Images/cd/cd-close-dark.svg) no-repeat center center;
     }
 
-.cd-img-replace {
+.cd-img-replace {*/
     /* replace text with image */
-    color: transparent;
+    /*color: transparent;
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
@@ -200,21 +92,21 @@ cars detali panel
 
 
 .cd-form {
-    width: 90%;
+    width: 90%;*/
     /*max-width: 600px;*/
-    margin: 4em auto;
+    /*margin: 4em auto;
 }
 
 .list-group-item {
     padding: 0.5rem 0rem;
-}
+}*/
 /* Растянуть CARD по высоте*/
-div#card-not-arrived-cars, div#card-epd-cars, div#card-car-info, div#card-arrived-cars {
+/*div#card-not-arrived-cars, div#card-epd-cars, div#card-car-info, div#card-arrived-cars {
     height: 100%;
-}
+}*/
 
 /**/
-legend {
+/*legend {
     display: block;
     width: auto;
     padding: 0 5px;
@@ -239,11 +131,11 @@ fieldset {
 
         fieldset > fieldset legend {
             text-transform: none;
-        }
+        }*/
 
 /*Информация по вагону*/
 
-.inp-epd {
+/*.inp-epd {
     border-color: blue;
     border-width: 2px;
 }
@@ -263,9 +155,9 @@ fieldset {
     border-width: 2px;
 }
 
-.mode-edit {
+.mode-edit {*/
     /*disabled;*/
-}
+/*}
 .mode-view {
     disabled;
-}
+}*/
