Форма Отправить состав  Продолжил работу

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="~/Content/view/idsrwt/outgoing.css">
     <!-- модули -->
     <link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/view_outgoing_cars.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/table_outgoing_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_outgoing_sostav.css" rel="stylesheet" /><!-- CSS стили модуля "Отправляемые составы" -->
 }
 
@@ -35,6 +37,7 @@
 
     <script src="~/Scripts/module/shared/form_detali.js"></script>
     <script src="~/Scripts/module/wsd/view_outgoing_cars.js"></script>
+    <script src="~/Scripts/module/wsd/table_outgoing_cars.js"></script>
     <script src="~/Scripts/module/wsd/table_outgoing_sostav.js"></script>    <!-- Модуль "Отправляемые составы" -->
 
     <script src="~/Scripts/view/idsrwt/main_outgoing.js"></script> <!--  -->
@@ -70,14 +73,3 @@
     </div>
 </div>
 
-@*<div id="cars-detali">
-    <div class="container-fluid">
-        <div class="alert" id="cars-detali-alert"></div>
-        <div>
-            <div class="col-md-12">
-
-            </div>
-        </div>
-        <a href="#0" class="close cd-img-replace">Close</a>
-    </div>
-</div>*@
