Тестовая форма для тестирования модуля table_outgoing_cars

--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -30,7 +30,7 @@
     <link href="~/Content/module/wsd/view_history_operation_arrival.css" rel="stylesheet" /><!-- CSS стили модуля "История операций принять на станцию" -->
 
     <link href="~/Content/module/wsd/table_outgoing_sostav.css" rel="stylesheet" /><!-- CSS стили модуля "Отправляемые составы" -->
-
+    <link href="~/Content/module/wsd/table_outgoing_cars.css" rel="stylesheet" />
     <style>
         .table-directory {
             font-size: 0.8rem;
@@ -91,6 +91,9 @@
 
     <script src="~/Scripts/module/wsd/table_outgoing_sostav.js"></script>    <!-- Модуль "Отправляемые составы" -->
 
+
+    <script src="~/Scripts/module/wsd/form_ho_outgoing_sostav.js"></script>
+    <script src="~/Scripts/module/wsd/table_outgoing_cars.js"></script>
 
     <script src="~/Scripts/view/idsrwt/test.js"></script>
 
@@ -194,7 +197,7 @@
                             </button>
                         </div>*@
 
-                    <div id="outgoing-sostav"></div>
+                    <div id="outgoing-cars"></div>
                     @*<div id="remainder-cars"></div>*@
                     <!--<div class="row">
                         <div class="col-xl-2">
