Переключил на тест Перенес функционала вагоны в левой часте

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="~/Content/view/idsrwt/outgoing.css">
     <!-- модули -->
     <link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/form_ho_outgoing_sostav.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/view_outgoing_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_outgoing_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_outgoing_sostav.css" rel="stylesheet" /><!-- CSS стили модуля "Отправляемые составы" -->
@@ -36,6 +37,8 @@
     <!--<script src="~/Scripts/plugins/pl_dialog_confirm.js"></script>--> <!-- Плагин -->
 
     <script src="~/Scripts/module/shared/form_detali.js"></script>
+
+    <script src="~/Scripts/module/wsd/form_ho_outgoing_sostav.js"></script>
     <script src="~/Scripts/module/wsd/view_outgoing_cars.js"></script>
     <script src="~/Scripts/module/wsd/table_outgoing_cars.js"></script>
     <script src="~/Scripts/module/wsd/table_outgoing_sostav.js"></script>    <!-- Модуль "Отправляемые составы" -->
