--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -8,7 +8,9 @@
     @Styles.Render("~/DateTime/css")
     <link rel="stylesheet" type="text/css" href="~/Content/view/idsrwt/outgoing.css">
     <!-- модули -->
-    <link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />
+    @*<link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />*@
+
+    <link href="~/Content/module/wsd/form_outgoing_cars_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_ho_outgoing_sostav.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/view_outgoing_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_outgoing_cars.css" rel="stylesheet" />
@@ -38,6 +40,7 @@
 
     <script src="~/Scripts/module/shared/form_detali.js"></script>
 
+    <script src="~/Scripts/module/wsd/form_outgoing_cars_detali.js"></script>
     <script src="~/Scripts/module/wsd/form_ho_outgoing_sostav.js"></script>
     <script src="~/Scripts/module/wsd/view_outgoing_cars.js"></script>
     <script src="~/Scripts/module/wsd/table_outgoing_cars.js"></script>
