--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -8,7 +8,7 @@
     @Styles.Render("~/DateTime/css")
     <link rel="stylesheet" type="text/css" href="~/Content/view/idsrwt/outgoing.css">
     <!-- модули -->
-    @*<link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />*@
+    <link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />
 
     <link href="~/Content/module/wsd/form_outgoing_cars_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_ho_outgoing_sostav.css" rel="stylesheet" />
