--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="~/Content/view/idsrwt/outgoing.css">
     <!-- модули -->
     <link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />
-
+    <link href="~/Content/module/wsd/table_outgoing_detention_return.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_outgoing_cars_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_ho_outgoing_sostav.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/view_outgoing_cars.css" rel="stylesheet" />
@@ -39,8 +39,8 @@
     <!--<script src="~/Scripts/api/uz_sms.js"></script>--> <!-- Class API Работа с модулем согласования -->
     <!--<script src="~/Scripts/plugins/pl_dialog_confirm.js"></script>--> <!-- Плагин -->
 
+    <script src="~/Scripts/module/wsd/table_outgoing_detention_return.js"></script>
     <script src="~/Scripts/module/shared/form_detali.js"></script>
-
     <script src="~/Scripts/module/wsd/form_outgoing_cars_detali.js"></script>
     <script src="~/Scripts/module/wsd/form_ho_outgoing_sostav.js"></script>
     <script src="~/Scripts/module/wsd/view_outgoing_cars.js"></script>
