--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -12,6 +12,7 @@
     <link href="~/Content/module/wsd/table_outgoing_detention_return.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_outgoing_cars_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_ho_outgoing_sostav.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/form_hd_outgoing_sostav.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/view_outgoing_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_outgoing_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_outgoing_sostav.css" rel="stylesheet" /><!-- CSS стили модуля "Отправляемые составы" -->
@@ -43,6 +44,7 @@
     <script src="~/Scripts/module/shared/form_detali.js"></script>
     <script src="~/Scripts/module/wsd/form_outgoing_cars_detali.js"></script>
     <script src="~/Scripts/module/wsd/form_ho_outgoing_sostav.js"></script>
+    <script src="~/Scripts/module/wsd/form_hd_outgoing_sostav.js"></script>
     <script src="~/Scripts/module/wsd/view_outgoing_cars.js"></script>
     <script src="~/Scripts/module/wsd/table_outgoing_cars.js"></script>
     <script src="~/Scripts/module/wsd/table_outgoing_sostav.js"></script>    <!-- Модуль "Отправляемые составы" -->
