--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -10,6 +10,7 @@
     <!-- модули -->
     <link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_incoming_sostav.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/form_hi_incoming_sostav.css" rel="stylesheet" />
 }
 
 @section scripts {
@@ -26,6 +27,7 @@
     <script src="~/Scripts/api/ids_wsd.js"></script>
     <script src="~/Scripts/module/shared/form_detali.js"></script>
     <script src="~/Scripts/module/wsd/table_incoming_sostav.js"></script>
+    <script src="~/Scripts/module/wsd/form_hi_incoming_sostav.js"></script>
 
     <script src="~/Scripts/view/idsrwt/main_incoming.js"></script> <!--  -->
 }
