--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -10,6 +10,7 @@
     <!-- модули -->
     <link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_hi_incoming_sostav.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/view_epd.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_incoming_cars_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_incoming_sostav.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_incoming_cars.css" rel="stylesheet" />
@@ -25,12 +26,14 @@
     <script src="~/Scripts/view/shared/common.js"></script>                 <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/module/shared/common.js"></script>
     <script src="~/Scripts/module/shared/modal_confirm_form.js"></script>   <!-- Форма сообщений подтверждения -->
+    <script src="~/Scripts/module/shared/epd.js"></script>                  <!-- Библиотека методов для работы ЭПД УЗ -->
     <script src="~/Scripts/api/shared.js"></script>                         <!-- Общая библиотека методов API -->
     <script src="~/Scripts/api/us_direct.js"></script>
     <script src="~/Scripts/api/ids_direct.js"></script>
     <script src="~/Scripts/api/ids_wsd.js"></script>
     <script src="~/Scripts/module/shared/form_detali.js"></script>
     <script src="~/Scripts/module/wsd/form_hi_incoming_sostav.js"></script>
+    <script src="~/Scripts/module/wsd/view_epd.js"></script>                        <!-- Информация по ЭПД -->
     <script src="~/Scripts/module/wsd/form_incoming_cars_detali.js"></script>
     <script src="~/Scripts/module/wsd/table_incoming_sostav.js"></script>
     <script src="~/Scripts/module/wsd/table_incoming_cars.js"></script>
