--- a/WEB_UI/Views/Shared/_IDS.cshtml
+++ b/WEB_UI/Views/Shared/_IDS.cshtml
@@ -43,7 +43,7 @@
             <div class="navbar-header navbar-right">
                 <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="navbar-toggler-icon"></span>
-                    @*<span class="sr-only">Toggle navigation</span> @GlobalResource.home_menu <i class="fa fa-bars"></i>*@
+                    @*<span class="sr-only">Toggle navigation</span> @GlobalResource.home_menu <i class="fas fa-bars"></i>*@
                 </button>
                 @*<a class="navbar-brand page-scroll" href="#page-top">@GlobalResource.home_link_home</a>*@
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -134,28 +134,28 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-cogs text-amkr sr-icons"></i>
+                        <i class="fas fa-4x fa-cogs text-amkr sr-icons"></i>
                         <a href='@Url.Action("Index", "Home", new { Area = "Admin" })'><h3>Администрирование</h3></a>
                         <p class="text-muted">Контроль работы и администрирование Web-сайта и сервисов приложений ИДС</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-amkr sr-icons"></i>
+                        <i class="fas fa-4x fa-paper-plane text-amkr sr-icons"></i>
                         <a href='@Url.Action("", "", new { Area = "" })'><h3>Рассылка</h3></a>
                         <p class="text-muted">Настройка и контроль рассылка электронной почты сервисами ИДС</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-tasks text-amkr sr-icons"></i>
+                        <i class="fas fa-4x fa-tasks text-amkr sr-icons"></i>
                         <a href='@Url.Action("Index", "Home", new { Area = "Directory" })'><h3>Утилиты</h3></a>
                         <p class="text-muted">Справочники ИДС и УЗ, сервисы и утилиты ТД</p>
                     </div>
                 </div>
                 @*<div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-cogs text-amkr sr-icons"></i>
+                        <i class="fas fa-4x fa-cogs text-amkr sr-icons"></i>
                         <a href='@Url.Action("", "", new { Area = "" })'><h3>Контроль систем</h3></a>
                         <p class="text-muted">Диагностика и контроль работы ИДС</p>
                     </div>
@@ -193,11 +193,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 offset-lg-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <i class="fas fa-phone fa-3x sr-contact"></i>
                     <p>@GlobalResource.contact_admin_phone</p>
                 </div>
                 <div class="col-lg-4 text-left">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                    <i class="fas fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:Eduard.Levchenko@arcelormittal.com">@GlobalResource.contact_admin_email</a></p>
                 </div>
             </div>
@@ -208,11 +208,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 offset-lg-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <i class="fas fa-phone fa-3x sr-contact"></i>
                     <p>@GlobalResource.contact_rail_transport_phone</p>
                 </div>
                 <div class="col-lg-4 text-left">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                    <i class="fas fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:Irina.Shuba@arcelormittal.com">@GlobalResource.contact_rail_transport_email</a></p>
                 </div>
             </div>
