--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -11,8 +11,9 @@
     <link href="~/Content/module/shared/form_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_incoming_cars_detali.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/form_hi_incoming_sostav.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/form_manual_incoming_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/view_epd.css" rel="stylesheet" />
-    
+
     <link href="~/Content/module/wsd/table_incoming_sostav.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_incoming_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/view_incoming_cars.css" rel="stylesheet" />
@@ -34,6 +35,7 @@
     <script src="~/Scripts/api/ids_wsd.js"></script>
     <script src="~/Scripts/module/shared/form_detali.js"></script>
     <script src="~/Scripts/module/wsd/form_hi_incoming_sostav.js"></script>
+    <script src="~/Scripts/module/wsd/form_manual_incoming_cars.js"></script>
     <script src="~/Scripts/module/wsd/view_epd.js"></script>                        <!-- Информация по ЭПД -->
     <script src="~/Scripts/module/wsd/form_incoming_cars_detali.js"></script>
     <script src="~/Scripts/module/wsd/table_incoming_sostav.js"></script>
