Исправил поиск эПД Отчеты

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -17,6 +17,7 @@
     <link href="~/Content/module/wsd/table_incoming_sostav.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_incoming_cars.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/view_incoming_cars.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/view_incoming_report.css" rel="stylesheet" />
 
 }
 
@@ -42,7 +43,7 @@
     <script src="~/Scripts/module/wsd/table_incoming_sostav.js"></script>
     <script src="~/Scripts/module/wsd/table_incoming_cars.js"></script>
     <script src="~/Scripts/module/wsd/view_incoming_cars.js"></script>
-
+    <script src="~/Scripts/module/wsd/view_incoming_report.js"></script>            <!-- Отчеты по прибытию -->
     <script src="~/Scripts/view/idsrwt/main_incoming.js"></script> <!--  -->
 }
 
