--- a/WEB_UI/Content/view/idsrwt/incoming.css
+++ b/WEB_UI/Content/view/idsrwt/incoming.css
@@ -1,631 +1,3 @@
-﻿/*@import url("../../font-awesome/css/font-awesome.min.css");
-
-body {
-}*/
-
-/*.dataTables_scrollBody {
-    overflow-y: visible !important;
-    overflow-x: initial !important;
-}*/
-
-/*table.dataTable tbody td.select-checkbox,
-table.dataTable tbody th.select-checkbox {
-    position: relative;
+﻿label#curent_date {
+    font-size:0.8rem;
 }
-
-    table.dataTable tbody td.select-checkbox:before, table.dataTable tbody td.select-checkbox:after,
-    table.dataTable tbody th.select-checkbox:before,
-    table.dataTable tbody th.select-checkbox:after {
-        display: block;
-        position: absolute;
-        top: 1.2em;
-        left: 50%;
-        width: 12px;
-        height: 12px;
-        box-sizing: border-box;
-    }
-
-    table.dataTable tbody td.select-checkbox:before,
-    table.dataTable tbody th.select-checkbox:before {
-        content: ' ';
-        margin-top: -6px;
-        margin-left: -6px;
-        border: 1px solid black;
-        border-radius: 3px;
-    }
-
-table.dataTable tr.selected td.select-checkbox:after,
-table.dataTable tr.selected th.select-checkbox:after {
-    content: '\2714';
-    margin-top: -11px;
-    margin-left: -4px;
-    text-align: center;
-    text-shadow: 1px 1px #B0BED9, -1px -1px #B0BED9, 1px -1px #B0BED9, -1px 1px #B0BED9;
-}*/
-
-/**/
-/*td.icon-right {
-    background: url('../../../Images/idsrwt/right.png') no-repeat left center;
-}
-
-td.icon-user {
-    background: url('../../../Images/idsrwt/user.png') no-repeat left center;
-}
-
-td.icon-ok {
-    background: url('../../../Images/idsrwt/ok.png') no-repeat center center;
-}
-
-td.icon-warning {
-    background: url('../../../Images/idsrwt/warning.png') no-repeat center center;
-}
-
-td.icon-delete {
-    background: url('../../../Images/idsrwt/delete.png') no-repeat center center;
-}*/
-/**/
-/*table.dataTable tbody tr:not(.selected).status-in-work.odd, table.dataTable tbody tr:not(.selected).status-in-work.even {
-    background-color: #fcf2ba;
-}
-
-table.dataTable tbody tr:not(.selected).status-accepted.odd, table.dataTable tbody tr:not(.selected).status-accepted.even {
-    background-color: #aeffb9;
-}
-
-table.dataTable tbody tr:not(.selected).status-rejected.odd, table.dataTable tbody tr:not(.selected).status-rejected.even {
-    background-color: #fbcfcf;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.status-in-work > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.status-in-work > .sorting_1 {
-    background-color: #F9DA9F;
-}
-table.dataTable.display tbody tr:not(.selected).even.status-in-work > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.status-in-work > .sorting_1 {
-    background-color: #F9DA9F;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.status-accepted > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.status-accepted > .sorting_1 {
-    background-color: #8EFFA8;
-}
-
-table.dataTable.display tbody tr:not(.selected).even.status-accepted > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.status-accepted > .sorting_1 {
-    background-color: #8EFFA8;
-}
-
-table.dataTable.display tbody tr:not(.selected).odd.status-rejected > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd.status-rejected > .sorting_1 {
-    background-color: #F9AEBB;
-}
-
-table.dataTable.display tbody tr:not(.selected).even.status-rejected > .sorting_1, table.dataTable.order-column.stripe tbody tr.even.status-rejected > .sorting_1 {
-    background-color: #F9AEBB;
-}*/
-
-/*table.dataTable.display tbody tr.odd > .sorting_1, table.dataTable.order-column.stripe tbody tr.odd > .sorting_1 {
-
-}*/
-
-
-/*div.dt-buttons a {
-    margin-right: 2px;
-}*/
-
-/*Коррекция отображения компонента дата и время*/
-/*.date-picker {
-    z-index: 202;
-}
-
-.date-picker-wrapper {
-    z-index: 201;
-}
-
-    .date-picker-wrapper .gap {
-        z-index: 201;
-    }
-
-        .date-picker-wrapper .gap .gap-line .gap-1 {
-            z-index: 201;
-        }
-
-        .date-picker-wrapper .gap .gap-line .gap-2 {
-            z-index: 202;
-        }
-
-        .date-picker-wrapper .gap .gap-line .gap-3 {
-            z-index: 202;
-        }
-
-        .date-picker-wrapper .gap .gap-top-mask {
-            z-index: 203;
-        }
-
-        .date-picker-wrapper .gap .gap-bottom-mask {
-            z-index: 203;
-        }*/
-
-
-
-/* -------------------------------- 
-
-print  detali panel 
-
--------------------------------- */
-/*.cd-print-detali {
-    position: fixed;
-    z-index: 3;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    background-color: #ebebeb;*/
-    /* Force Hardware Acceleration */
-    /*-webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform: translateY(100%);
-    -moz-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    -o-transform: translateY(100%);
-    transform: translateY(100%);
-    -webkit-transition: -webkit-transform 0.4s 0s, visibility 0s 0.4s;
-    -moz-transition: -moz-transform 0.4s 0s, visibility 0s 0.4s;
-    transition: transform 0.4s 0s, visibility 0s 0.4s;
-    -webkit-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-    -moz-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-    transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-}
-
-    .cd-print-detali > div {
-        height: 100%;
-        overflow-y: auto;
-        padding: 4em 2em;
-    }
-
-    .cd-print-detali.is-visible {
-        visibility: visible;
-        -webkit-transform: translateY(0);
-        -moz-transform: translateY(0);
-        -ms-transform: translateY(0);
-        -o-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-transition: -webkit-transform 0.4s 0s, visibility 0s 0s;
-        -moz-transition: -moz-transform 0.4s 0s, visibility 0s 0s;
-        transition: transform 0.4s 0s, visibility 0s 0s;
-        -webkit-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-        -moz-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-        transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-    }
-
-        .cd-print-detali.is-visible > div {*/
-            /* smooth scrolling on iOS */
-            /*-webkit-overflow-scrolling: touch;
-        }*/
-
-    /*.cd-print-detali p {
-        margin-bottom: 1em;
-        font-size: 1.4rem;
-        color: #6f757c;
-        line-height: 1.6;
-        font-weight:400;
-    }*/
-
-    /*.cd-print-detali .close {
-        display: block;
-        height: 32px;
-        width: 32px;
-        position: absolute;
-        top: 80px;
-        right: 3%;
-        background: url(../../../Images/cd/cd-close-dark.svg) no-repeat center center;
-    }
-
-.cd-img-replace {*/
-    /* replace text with image */
-    /*color: transparent;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}*/
-
-/*@media only screen and (min-width: 900px) {
-    .cd-print-detali h2 {
-        font-size: 4rem;
-    }
-
-    .cd-print-detali em {
-        font-size: 2.4rem;
-    }
-
-    .cd-print-detali p {
-        font-size: 1.8rem;
-    
-
-    .cd-print-detali .close {
-        top: 80px;
-        right: 2%;
-    }
-}*/
-
-/*#print_frame{display: none;}*/
-
-/*Окно отображения текста для печати*/
-
-
-/*.to_print {
-    font-family: sans-serif;
-    margin: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
-}
-
-    .to_print h1, .to_print h2, .to_print h3, .to_print h4, .to_print h5, .to_print h6 {
-        margin-top: 0;
-        margin-bottom: 0.5rem;
-    }
-
-    .to_print h1, .to_print h2, .to_print h3, .to_print h4, .to_print h5, .to_print h6,
-    .h1, .h2, .h3, .h4, .h5, .h6 {
-        margin-bottom: 0.5rem;
-        font-weight: 500;
-        line-height: 1.2;
-    }
-
-    .to_print h1, .h1 {
-        font-size: 2.5rem;
-    }
-
-    .to_print h2, .h2 {
-        font-size: 2rem;
-    }
-
-    .to_print h3, .h3 {
-        font-size: 1.75rem;
-    }
-
-    .to_print h4, .h4 {
-        font-size: 1.5rem;
-    }
-
-    .to_print h5, .h5 {
-        font-size: 1.25rem;
-    }
-
-    .to_print h6, .h6 {
-        font-size: 1rem;
-    }
-
-.print-table {
-    width: 200mm;*/ /* Ширина таблицы */
-    /*border: 1px solid #000000;
-}
-
-    .print-table td, .print-table th {
-        border: 1px solid #000000;
-        font-size: 12px;
-    }*/
-
-
-/* -------------------------------- 
-
-cars detali panel 
-
--------------------------------- */
-/*.cd-cars-detali {
-    position: fixed;
-    z-index: 3;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    background-color: #ebebeb;*/
-    /* Force Hardware Acceleration */
-    /*-webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform: translateY(100%);
-    -moz-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    -o-transform: translateY(100%);
-    transform: translateY(100%);
-    -webkit-transition: -webkit-transform 0.4s 0s, visibility 0s 0.4s;
-    -moz-transition: -moz-transform 0.4s 0s, visibility 0s 0.4s;
-    transition: transform 0.4s 0s, visibility 0s 0.4s;
-    -webkit-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-    -moz-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-    transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-}
-
-    .cd-cars-detali > div {
-        height: 100%;
-        overflow-y: auto;
-        padding: 4em 2em;
-    }
-
-    .cd-cars-detali.is-visible {
-        visibility: visible;
-        -webkit-transform: translateY(0);
-        -moz-transform: translateY(0);
-        -ms-transform: translateY(0);
-        -o-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-transition: -webkit-transform 0.4s 0s, visibility 0s 0s;
-        -moz-transition: -moz-transform 0.4s 0s, visibility 0s 0s;
-        transition: transform 0.4s 0s, visibility 0s 0s;
-        -webkit-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-        -moz-transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-        transition-timing-function: cubic-bezier(0.67, 0.15, 0.83, 0.83);
-    }
-
-        .cd-cars-detali.is-visible > div {*/
-            /* smooth scrolling on iOS */
-            /*-webkit-overflow-scrolling: touch;
-        }*/
-
-    /*.cd-cars-detali p {
-        margin-bottom: 1em;
-        font-size: 1.4rem;
-        color: #6f757c;
-        line-height: 1.6;
-        font-weight:400;
-    }*/
-
-    /*.cd-cars-detali .close {
-        display: block;
-        height: 32px;
-        width: 32px;
-        position: absolute;
-        top: 80px;
-        right: 3%;
-        background: url(../../../Images/cd/cd-close-dark.svg) no-repeat center center;
-    }
-
-.cd-img-replace {*/
-    /* replace text with image */
-    /*color: transparent;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}*/
-
-/*@media only screen and (min-width: 900px) {
-    .cd-cars-detali h2 {
-        font-size: 4rem;
-    }
-
-    .cd-cars-detali em {
-        font-size: 2.4rem;
-    }
-
-    .cd-cars-detali p {
-        font-size: 1.8rem;
-    
-
-    .cd-cars-detali .close {
-        top: 80px;
-        right: 2%;
-    }
-}*/
-
-/*.cd-form {
-    width: 90%;*/
-    /*max-width: 600px;*/
-    /*margin: 4em auto;
-}
-
-.list-group-item {
-    padding: 0.5rem 0rem;
-}*/
-/* Растянуть CARD по высоте*/
-/*div#card-not-arrived-cars, div#card-epd-cars, div#card-car-info, div#card-arrived-cars {
-    height: 100%;
-}*/
-
-/**/
-/*div#accordion > div.card {
-    -moz-box-direction: normal;
-    -moz-box-orient: vertical;
-    background-color: #fff;
-    border-radius: 0.25rem;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin-bottom: 1px;*/
-    /*border:none;*/
-/*}
-
-div#accordion div.card > .card-header:first-child {
-    border-radius: 0;
-}
-
-div#accordion > .card-header {
-    background-color: #f7f7f9;
-    margin-bottom: 0;
-    padding: 20px 1.25rem;
-    border: none;
-}
-
-div#accordion div.card > .card-header a i {
-    float: left;*/
-    /*font-size: 25px;*/
-    /*padding: 5px 0;
-    margin: 0 25px 0 0px;
-    color: #195C9D;
-}
-
-div#accordion div.card > .card-header i {
-    float: right;*/
-    /*font-size: 30px;*/
-    /*width: 1%;
-    margin-top: 8px;
-    margin-right: 10px;
-}
-
-div#accordion div.card > .card-header a {
-    width: 97%;
-    float: left;
-    color: #565656;
-    text-decoration: none;
-}
-
-div#accordion div.card > .card-header p {
-    margin: 0;
-}
-
-div#accordion div.card > .card-header h3 {
-    margin: 0 0 0px;*/
-    /*font-size: 20px;*/
-    /*font-family: 'Slabo 27px', serif;
-    font-weight: bold;
-    color: #3fc199;
-}
-
-div#accordion div.card > div > .card-block {
-    -moz-box-flex: 1;
-    flex: 1 1 auto;
-    padding: 0.5rem !important;
-    color: #232323;
-    box-shadow: inset 0px 4px 5px rgba(0,0,0,0.1);
-    border-top: 1px soild #000;
-    border-radius: 0;
-}
-
-
-.card-block > div > div > .col-form-label-sm {
-    padding-top: calc(0.25rem + 1px);
-    padding-bottom: calc(0.25rem + 1px);
-    font-size: 0.75rem;
-    line-height: 1.5;
-}
-
-.card-block > div > div > .form-control-sm {
-    height: calc(1.5em + 0.5rem + 2px);
-    padding: 0.2rem 0.5rem;
-    font-size: 0.8rem;
-    line-height: 1.5;
-    border-radius: 0.2rem;
-}*/
-
-/**/
-/*legend {
-    display: block;
-    width: auto;
-    padding: 0 5px;
-    margin-bottom: 0;
-    font-size: inherit;
-    line-height: inherit;
-    border-bottom: none;
-    text-transform: uppercase;
-}
-
-fieldset {
-    border: 2px groove threedface;
-    padding: 10px;
-    border-radius: 3px;
-}
-
-    fieldset > fieldset {
-        border: 1px groove threedface;
-        padding: 5px;
-        border-radius: 3px;
-    }
-
-        fieldset > fieldset legend {
-            text-transform: none;
-        }*/
-
-/*fieldset > div > div > .col-form-label-sm {
-        padding-top: calc(0.25rem + 1px);
-        padding-bottom: calc(0.25rem + 1px);
-        font-size: 0.75rem;
-        line-height: 1.5;
-    }
-
-    fieldset > div > div > .form-control-sm {
-        height: calc(1.5em + 0.5rem + 2px);
-        padding: 0.2rem 0.5rem;
-        font-size: 0.8rem;
-        line-height: 1.5;
-        border-radius: 0.2rem;
-    }*/
-
-/*.close-vagon {
-    display: block;
-}
-
-.inp-epd {
-    border-color: blue;
-    border-width: 2px;
-}
-
-.inp-manual {
-    border-color: red;
-    border-width: 2px;
-}
-
-.inp-uz {
-    border-color: orange;
-    border-width: 2px;
-}
-
-.inp-auto {
-    border-color: darkviolet;
-    border-width: 2px;
-}*/
-
-/*#sortable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
-  #sortable li { margin: 0 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; font-size: 1.4em; height: 18px; }
-  #sortable li span { position: absolute; margin-left: -1.3em; }*/
-
-
-/*#list_nums {
-    border: 1px solid #195C9D;
-}
-#report_page1, #report_page2 {
-    border: 1px solid red;
-    min-height: 100px;
-}
-
-#list_nums, #report_page1, #report_page2 {
-    width: 142px;*/
-    /*min-height: 20px;*/
-    /*list-style-type: none;
-    margin: 0;
-    padding: 5px 0 0 0;
-    float: left;
-    margin-right: 10px;
-}
-
-    #list_nums li, #report_page1 li, #report_page2 li {
-        margin: 0 5px 5px 5px;
-        padding: 5px;
-        font-size: 1.2em;
-        width: 120px;
-    }
-
-#fs-list-nums, #fs-report-page1, #fs-report-page2 {
-    overflow-y: scroll;*/ /* Добавляем полосу прокрутки */
-    /*height: 500px;*/ /* Высота блока */
-    /*margin-right:10px;
-}
-
-.buttons-error {    
-  background-color: red !important;
-  color: white !important; 
-  border: 1px outset !important;
-}*/
-/*.buttons-error:hover {
-  background-color: pink !important;
-}*/
