Поправил вывод информации

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -58,9 +58,10 @@
         <div class="collapse navbar-collapse text-light" id="nb-incoming">
         </div>
         <div>
+            <label class="text-warning">@User.Identity.Name</label><br />
             <label class="text-warning" id="curent_date"></label>
         </div>
-        <div>
+        <div class="ml-1">
             <a href="#" id="client_count" class="badge badge-primary">0</a>
         </div>
     </div>
