Добавил окно отчетов и форму для отчета

--- a/WEB_UI/Views/Shared/_IDS.cshtml
+++ b/WEB_UI/Views/Shared/_IDS.cshtml
@@ -115,7 +115,7 @@
                     <h2 class="section-heading">@GlobalResource.system_transport_department_title</h2>
                     <hr class="light">
                     <p class="text-faded">@GlobalResource.system_transport_department_description</p>
-                    <a href="#" class="btn btn-default btn-xl sr-button">@GlobalResource.link_goto</a>
+                    <a href='@Url.Action("Index", "Home", new { Area = "IDSReport" })' class="btn btn-default btn-xl sr-button">@GlobalResource.link_goto</a>
                 </div>
             </div>
         </div>
