Закончил отсет по продажникам

--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_SD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_SD.cshtml
@@ -36,11 +36,11 @@
             @*<h3 class="h6 mb-3">@IDSReportResource.report_sd_group_link_cargo</h3>*@
             <ul class="list-unstyled components mb-5 text-left" id="list-sidebar">
                 @*<li class="active">
-                    <a href="#"><i class="fa-solid fa-magnifying-glass-arrow-right mr-1" style="color:#44bef1"></i>@IDSReportResource.report_sd_link_border_crossing</a>
-                </li>
-                <li>
-                        <a href="#"><span class="fa fa-user mr-3"></span> About</a>
-                 </li>*@
+                        <a href="#"><i class="fa-solid fa-magnifying-glass-arrow-right mr-1" style="color:#44bef1"></i>@IDSReportResource.report_sd_link_border_crossing</a>
+                    </li>
+                    <li>
+                            <a href="#"><span class="fa fa-user mr-3"></span> About</a>
+                     </li>*@
             </ul>
             <div class="footer">
                 <p>
@@ -50,19 +50,20 @@
         </div>
     </nav>
     <div id="content" class="p-4 p-md-5 pt-5 pt-1">
-        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-            <div class="btn-toolbar mb-2 mb-md-0">
-                <div class="btn-group mr-2">
-                    <button class="btn btn-sm btn-outline-secondary" type="button">Share</button>
-                    <button class="btn btn-sm btn-outline-secondary" type="button">Export</button>
-                </div>
-                <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button">
-                    <span data-feather="calendar"></span>
-                    This week
-                </button>
-            </div>
-        </div>
+
     </div>
 </div>
 
+@*<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="h2">Dashboard</h1>
+        <div class="btn-toolbar mb-2 mb-md-0">
+            <div class="btn-group mr-2">
+                <button class="btn btn-sm btn-outline-secondary" type="button">Share</button>
+                <button class="btn btn-sm btn-outline-secondary" type="button">Export</button>
+            </div>
+            <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button">
+                <span data-feather="calendar"></span>
+                This week
+            </button>
+        </div>
+    </div>*@
