--- a/WEB_UI/Areas/IDSReport/Views/Shared/_IDSReport.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Shared/_IDSReport.cshtml
@@ -27,6 +27,13 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "" })'>Номе</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
