Разработка изменения годности

--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -169,9 +169,9 @@
                         </a>
                     </li>
                     <li>
-                        <a class="cd-nav-item item-6" href="#">
-                            <h3>Service #6</h3>
-                            <p>This is the item description</p>
+                        <a class="cd-nav-item item-4" href='@Url.Action("ComCondition", "Home", new { Area = "Directory" })'>
+                            <h3>@DirectoryResource.commercial_condition_title</h3>
+                            <p>@DirectoryResource.commercial_condition_description</p>
                         </a>
                     </li>
                     <li>
