Закончил сервис Коммерческое состояние

--- a/WEB_UI/Areas/Directory/Views/Home/ComCondition.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ComCondition.cshtml
@@ -30,14 +30,16 @@
 
     <script src="~/Scripts/view/shared/common.js"></script>                 <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/module/shared/common.js"></script>
+    <script src="~/Scripts/module/shared/modal_confirm_form.js"></script>-->   <!-- Форма сообщений подтверждения -->
     <script src="~/Scripts/api/shared.js"></script>-->                      <!-- Общая библиотека методов API -->
     <script src="~/Scripts/api/ids_server.js"></script>
     <script src="~/Scripts/api/ids_direct.js"></script>
     <script src="~/Scripts/api/ids_wsd.js"></script>
 
 
-    <!--<script src="~/Scripts/module/shared/modal_confirm_form.js"></script>-->   <!-- Форма сообщений подтверждения -->
-    <!--<script src="~/Scripts/module/shared/epd.js"></script>-->                  <!-- Библиотека методов для работы ЭПД УЗ -->
+    <!--
+    <!--<script src="~/Scripts/module/shared/epd.js"></script>-->
+    <!-- Библиотека методов для работы ЭПД УЗ -->
     <!--<script src="~/Scripts/api/us_direct.js"></script>
     <script src="~/Scripts/module/shared/form_detali.js"></script>
     <script src="~/Scripts/module/wsd/form_hi_incoming_sostav.js"></script>
@@ -90,7 +92,7 @@
                         <div class="col-sm-6">
                             <div class="card border-secondary mb-3">
                                 <div class="card-header">Текущая информация</div>
-                                <div class="card-body text-secondary"id="wagon-detali">
+                                <div class="card-body text-secondary" id="wagon-detali">
 
                                 </div>
                             </div>
@@ -98,7 +100,7 @@
                         <div class="col-sm-6">
                             <div class="card border-primary mb-3">
                                 <div class="card-header">Изменить</div>
-                                <div class="card-body text-primary">
+                                <div class="card-body text-primary" id="wagon-edit">
 
                                 </div>
                             </div>
