--- a/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
+++ b/WEB_UI/Areas/IDSReport/Views/Home/Report_TD.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/DataTables/css")
     @Styles.Render("~/DateTime/css")
     <link href="~/Content/module/report/view_td_report.css" rel="stylesheet">
+    <link href="~/Content/module/report/table_td_report.css" rel="stylesheet" />
     <link href="~/Content/view/idsreport/main_td_report.css" rel="stylesheet">
 }
 
@@ -19,12 +20,15 @@
     <script src="~/Scripts/api/shared.js"></script>
     <script src="~/Scripts/api/ids_direct.js"></script>
     <script src="~/Scripts/api/ids_wsd.js"></script>
+    <script src="~/Scripts/module/report/table_td_report.js"></script>
     <script src="~/Scripts/module/report/view_td_report.js"></script>
     <script src="~/Scripts/view/idsreport/main_td_report.js"></script>
 }
 <div id="report">
 
 </div>
+
+
 
 <!--<div class="wrapper d-flex align-items-stretch">
     <nav id="sidebar">
@@ -36,15 +40,15 @@
         </div>
         <div class="p-4">
             <h1><a href='@Url.Action("Index", "Home", new { Area = "IDSReport" })' class="logo">@IDSReportResource.system_idsreport_title<span><i class="fa-solid fa-sack-dollar mr-1"></i>@IDSReportResource.report_td_title</span></a></h1>-->
-            @*<h3 class="h6 mb-3">@IDSReportResource.report_sd_group_link_cargo</h3>*@
-            <!--<ul class="list-unstyled components mb-5 text-left" id="list-sidebar">-->
-                @*<li class="active">
-                        <a href="#"><i class="fa-solid fa-magnifying-glass-arrow-right mr-1" style="color:#44bef1"></i>@IDSReportResource.report_sd_link_border_crossing</a>
-                    </li>
-                    <li>
-                            <a href="#"><span class="fa fa-user mr-3"></span> About</a>
-                  </li>*@
-            <!--</ul>
+@*<h3 class="h6 mb-3">@IDSReportResource.report_sd_group_link_cargo</h3>*@
+<!--<ul class="list-unstyled components mb-5 text-left" id="list-sidebar">-->
+@*<li class="active">
+          <a href="#"><i class="fa-solid fa-magnifying-glass-arrow-right mr-1" style="color:#44bef1"></i>@IDSReportResource.report_sd_link_border_crossing</a>
+      </li>
+      <li>
+              <a href="#"><span class="fa fa-user mr-3"></span> About</a>
+    </li>*@
+<!--</ul>
             <div class="footer">
                 <p>
 
